--- a/client/src/App.css
+++ b/client/src/App.css
@@ -223,6 +223,10 @@ button:hover:after {
   left: 95%;
 }
 
+.login-error{
+  color: red;
+}
+
 @media (max-width: 991px) {
   .inner {
     width: 400px;
