--- a/client/src/style/Announcement.css
+++ b/client/src/style/Announcement.css
@@ -75,12 +75,14 @@
   }
   
   .amt__top button {
+    margin: 0;
     padding: 5px 10px;
     background-color: #007bff;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    width: max-content;
   }
   
   .amt__top button:hover {
