--- a/client/src/style/Header.css
+++ b/client/src/style/Header.css
@@ -1,17 +1,33 @@
 .header1{
-    padding: 30px;
-    background-color: #011627;
-    height: 30px;
-    display: flex;
-    color: white;
-  }
+  padding: 30px;
+  background-color: #011627;
+  height: 90px;
+  display: flex;
+  flex-direction: row;
+  color: white;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+
+}
+
+.avatar{
+  margin: 0;
+}
+
+.title{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
 .header{
     font-size: 25px;
     cursor: pointer;
   }
 .heading{
   display: flex;
-  margin: -9px 25px 17px 25px;
+  /* margin: -9px 25px 17px 25px; */
   font-size: 35px;
 }
 .plus{
@@ -23,10 +39,8 @@
 }
 .profile{
   font-size: 25px;
-    margin-top: 0px;
-    margin-right: 20px;
-    margin-bottom: 15px;
-    margin-left: 20px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 .form-container {
   display: flex;
