--- a/client/src/style/Navbar.css
+++ b/client/src/style/Navbar.css
@@ -64,9 +64,25 @@ ul li a svg{
   }
   .closebtn{
     position: absolute;
-    margin-left: 215px;
+    margin-left: 202px;
     color: #eaecef;
     top: 5px;
     font-size: 20px;
+    cursor: pointer;
+}
+.closebtn:hover{
+    color: #172b4d;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  max-height: 50%; 
+  height: 50%;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: transparent; 
 }
   
