--- a/client/src/style/Announcement.css
+++ b/client/src/style/Announcement.css
@@ -1,3 +1,28 @@
+/* .amt {
+    background-color: #fff;
+    border: 0.0625rem solid #dadce0;
+    -webkit-border-radius: 0.5rem;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    margin-bottom: 1.5rem;
+  }
+  .amt__top {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    margin-left: 19px;
+  }
+  .amt__top > * {
+    margin-left: 10px;
+  }
+  .amt__Cnt {
+    padding: 0.5rem 0;
+  }
+  .amt__txt {
+    margin: 10px 15px;
+  }
+  */
+  /* Default styles for all announcements */
 .amt {
   border: 1px solid #fff;
   margin-bottom: 10px;
@@ -63,6 +88,4 @@
   .avatar {
     margin-right: 10px;
   }
-  .pdfbtn{
-    display: flex;
-  }
+  
